Tela de login e estilização

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,15 +13,24 @@
         android:theme="@style/Theme.NoWaste"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".InitialActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.NoWaste">
+            android:theme="@style/Theme.NoWaste"
+            android:windowSoftInputMode="adjustNothing"
+            >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.NoWaste">
         </activity>
     </application>
 
